fixed scrollbar style and behavior

--- a/shapev/src/components/layout/sidebar/dropdown/Dropdown.module.css
+++ b/shapev/src/components/layout/sidebar/dropdown/Dropdown.module.css
@@ -1,22 +1,21 @@
 .title {
 	display: inline-block;
 	padding: 0.5rem 0;
-	border-bottom: 2px solid #6e41e2;
 	width: min-content;
-	border-width: min-content;
+	border-bottom: 2px solid #6e41e2;
 	margin-bottom: 2rem;
 }
 .item {
-	padding: 0.5rem 1rem;
-	line-height: 150%;
-	letter-spacing: 0.5px;
 	cursor: pointer;
+	line-height: 150%;
+	padding: 0.5rem 1rem;
+	letter-spacing: 0.5px;
 }
 .itemGroup {
 	margin-top: 1rem;
+	border-radius: 4px;
 	box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.04),
 		0px 14px 24px rgba(51, 51, 51, 0.12);
-	border-radius: 4px;
 }
 .item:hover {
 	background-color: #f1f1f1;
@@ -32,8 +31,29 @@
 }
 .itemGroup {
 	max-height: 300px;
-	overflow: scroll;
+	overflow: auto;
 }
+/* scrollbar style */
+.itemGroup {
+	/* firefox */
+	scrollbar-width: thin;
+	scrollbar-color: #bdbdbd #e0e0e0;
+}
+.itemGroup::-webkit-scrollbar {
+	width: 9px;
+}
+.itemGroup::-webkit-scrollbar-track {
+	background-color: #e0e0e0;
+	border-radius: 100vw;
+}
+.itemGroup::-webkit-scrollbar-thumb {
+	background-color: #bdbdbd;
+	border-radius: 100vw;
+}
+.itemGroup::-webkit-scrollbar-thumb:hover {
+	background-color: #949494;
+}
+
 .muscularSystemContainer {
 	display: grid;
 	place-content: center;
